@@ -3,7 +3,7 @@ lib_LTLIBRARIES = libldapbackend.la
 EXTRA_DIST=OBJECTFILES OBJECTLIBS
 
 libldapbackend_la_SOURCES=ldapbackend.cc ldapbackend.hh \
-		powerldap.hh powerldap.cc
+		powerldap.hh powerldap.cc utils.hh
 
 
 libldapbackend_la_LIBADD=-lldap
